tests/rustdoc-ui/error-in-impl-trait/infinite-recursive-type-2.rs
pub fn f() -> impl Sized {
    pub enum E {
        //~^ ERROR: recursive type
        V(E),
    }

    unimplemented!()
}
